--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,10 @@
-<p>
-  home works!
-</p>
+<app-header></app-header>
+<!-- <mat-drawer-container class="content-container">
+  <mat-drawer mode="side" opened>
+    <app-sidebar></app-sidebar>
+  </mat-drawer>
+  <mat-drawer-content>
+  </mat-drawer-content>
+</mat-drawer-container> -->
+<router-outlet></router-outlet>
+<app-footer></app-footer>
