--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,13 +1,31 @@
 .login-container {
+    height: 100%;
     display: flex;
+    justify-content: center;
     flex-direction: column;
-    align-content: center;
-    text-align: center;
-    .logo mat-icon{
+    align-items: center;
+  
+    > div {
+      display: flex;
+      flex-direction: column;
+      width: 25rem;
+      text-align: center;
+      padding: 90px 40px 60px 40px;
+  
+      .logo mat-icon {
         zoom: 3;
+        margin: 0 auto;
+      }
+  
+      button {
+        height: 60px;
+        text-transform: uppercase;
+        font-size: 17px;
+        letter-spacing: 3px;
+      }
     }
-}
-form {
+  }
+  form {
     display: flex;
     flex-direction: column;
-}
+  }
