--- a/src/app/home/header/header.component.html
+++ b/src/app/home/header/header.component.html
@@ -1,6 +1,6 @@
-<mat-toolbar>
-  <mat-icon aria-hidden="false" aria-label="Leave Tracker">directions_run</mat-icon>
-  <span>Leave Tracker</span>
+<mat-toolbar color="primary">
+  <mat-icon class="logo" aria-hidden="false" aria-label="Time Tracker">watch_later</mat-icon>
+  <span>Time Tracker</span>
   <span class="spacer"></span>
   <span>{{name}}</span>
   <button mat-icon-button aria-label="Logout" class="icon" (click)="logout()">
