--- a/src/app/home/header/header.component.html
+++ b/src/app/home/header/header.component.html
@@ -2,7 +2,7 @@
   <mat-icon class="logo" aria-hidden="false" aria-label="Time Tracker">watch_later</mat-icon>
   <span>Time Tracker</span>
   <span class="spacer"></span>
-  <span>{{name}}</span>
+  <span class="name">{{name}}</span>
   <button mat-icon-button aria-label="Logout" class="icon" (click)="logout()">
     <mat-icon aria-hidden="false" aria-label="Logout">exit_to_app</mat-icon>
   </button>
