--- a/src/app/home/header/header.component.scss
+++ b/src/app/home/header/header.component.scss
@@ -1,6 +1,12 @@
 .spacer {
-  flex: 1 1 auto;
+    flex: 1 1 auto;
 }
 .logo {
-  margin-right: 10px;
+    zoom: 2;
+    margin-right: 10px;
+}
+.name {
+    font-size: 16px;
+    margin-right: 10px;
+    font-weight: 100;
 }
