--- a/src/app/home/header/header.component.html
+++ b/src/app/home/header/header.component.html
@@ -1,9 +1,11 @@
 <mat-toolbar color="primary">
-  <mat-icon class="logo" aria-hidden="false" aria-label="Time Tracker">watch_later</mat-icon>
-  <span>Time Tracker</span>
-  <span class="spacer"></span>
-  <span class="name">{{name}}</span>
-  <button mat-icon-button aria-label="Logout" class="icon" (click)="logout()">
-    <mat-icon aria-hidden="false" aria-label="Logout">exit_to_app</mat-icon>
-  </button>
+  <div class="header-container">
+    <mat-icon class="logo" aria-hidden="false" aria-label="Time Tracker">watch_later</mat-icon>
+    <span>Time Tracker</span>
+    <span class="spacer"></span>
+    <span class="name">{{name}}</span>
+    <button mat-icon-button aria-label="Logout" class="icon" (click)="logout()">
+      <mat-icon aria-hidden="false" aria-label="Logout">exit_to_app</mat-icon>
+    </button>
+  </div>
 </mat-toolbar>
