--- a/src/app/user/user.component.scss
+++ b/src/app/user/user.component.scss
@@ -1,4 +1,7 @@
 .user-container {
+    max-width: 70rem;
+    margin: 20px auto;
+    
     .user-form {
         display: flex;
         flex-direction: column;
