--- a/src/app/users/users.component.scss
+++ b/src/app/users/users.component.scss
@@ -6,6 +6,7 @@
         .mat-form-field {
             font-size: 14px;
             width: 100%;
+            margin-top: 20px;
         }
     }
     .table-container {
